--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -89,3 +89,11 @@
     letter-spacing: 2px;
 }
 
+.home-showcase-wrapper{
+    height: fit-content;
+    margin-top: 2rem;
+}
+
+.home-showcase-container{
+    width: 80%;
+}
