--- a/src/pages/shared/shared.css
+++ b/src/pages/shared/shared.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+*{
+    font-family: 'Poppins', sans-serif; 
+}
 .shared-main-wrapper{
     height: 100%;
     width: 100%;
@@ -31,3 +37,4 @@
 .shared-icon-container{
     
 }
+
